[package]
name = "ecto"
version = "0.1.0"
authors = ["ghost <ghost>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.70"

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "Window",
]

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
